# LBS-Deformation

./: README.md
Example/: CMakeLists.txt  SkelData.json  main.cpp
SkeletonModel/: SMPLModel.h  SkeletonModel.h  SkeletonModel2.h  rotation.h
